# zed-fish-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml  release.yml
languages/fish/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  outline.scm  overrides.scm  redactions.scm  runnables.scm  tasks.json  textobjects.scm
src/: lib.rs
tests/: queries.rs
tests/fixtures/textobjects/: for_loop_body.fish  function_with_options.fish
